--- a/Module-3/css/main.css
+++ b/Module-3/css/main.css
@@ -1,8 +1,10 @@
 * {
   box-sizing: border-box;
+
 }
 body {
   background-color: white;
+  margin: 0px;
 }
 h1 {
   margin-bottom: 15px;
@@ -11,6 +13,7 @@ h1 {
   margin: 25px 0px;
 }
 .main-body{
+  align-self: center;
   height:1000px;
 }
 .navbar{
@@ -23,11 +26,13 @@ h1 {
   background-color: #A9A9A9;
   height:auto;
   border: 1px solid black;
-  margin: 10px;
+  margin: 0px;
+  padding: 0px;
 }
 .box-content{
   clear: right;
   margin: 20px;
+  padding: 0px;
 }
 .red{
   background-color: #FFA07A;
@@ -52,15 +57,4 @@ h1 {
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
-}
-
-/********** PC devices only **********/
-@media (min-width: 992px) {
-}
-
-/********** Tablets devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-}
-/********** Mobiles devices only **********/
-@media (max-width: 767px) {
 }
