--- a/Module-3/css/main.css
+++ b/Module-3/css/main.css
@@ -13,7 +13,6 @@ h1 {
   margin: 25px 0px;
 }
 .main-body{
-  align-self: center;
   height:1000px;
 }
 .navbar{
@@ -26,8 +25,7 @@ h1 {
   background-color: #A9A9A9;
   height:auto;
   border: 1px solid black;
-  margin: 0px;
-  padding: 0px;
+  margin: 10px 0px;
 }
 .box-content{
   clear: right;
@@ -53,8 +51,4 @@ h1 {
   height:auto;
   width:180px;
   border: 1px solid black;
-}
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
 }
